fix btn-block alignment and add update version to media-detail

--- a/assets/sass/atoms/_buttons.scss
+++ b/assets/sass/atoms/_buttons.scss
@@ -10,6 +10,7 @@
               background 0.3s,
               border 0.3s;
   margin-bottom: 0.2em;
+  &.btn-block {text-align: center;}
   &:active {box-shadow: none;}
 }
 
